<resources>
    <string name="app_name">BasketBallFinder</string>
    <string name="desired_league">Desired League</string>
    <string name="mens">Mens</string>
    <string name="women">Women</string>
    <string name="togglebutton">Women</string>
    <string name="background_image">Background Image</string>
    <string name="next">Next</string>
    <string name="co_ed">Co-Ed</string>
    <string name="on_going_all_out">ON GOING ALL OUT</string>
    <string name="get_started">GET STARTED</string>
    <string name="go_all_in">GO ALL IN</string>
    <string name="search_league">Looking for a co-ed beginer near you</string>
    <string name="finish">FINISH</string>
    <string name="baller">baller</string>
    <string name="beginner">beginner</string>
    <string name="my_skill">I am a</string>
    <string name="logo">Logo</string>
    <string name="bg">bg</string>
</resources>
